--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>TinDog</title>
+  <title>WoofBook</title>
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
@@ -218,7 +218,8 @@
 
     <footer id="footer">
       <i class="fab footer-icons fa-twitter"></i> <i class="fab footer-icons fa-facebook"></i> <i class="fab footer-icons fa-instagram"></i> <i class="fas footer-icons fa-envelope"></i>
-      <p>© Copyright 2018 TinDog</p>
+      <p>© Copyright 2021 WoofBook</p>
+      <p> Made with ❤️ Gajendra Surariya</p>
 
     </footer>
   </div>
