--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <section id="title">
     <div class="container-fluid">
       <nav class="navbar navbar-expand-lg navbar-dark" >
-          <a class="navbar-brand" href="">tindog</a>
+          <a class="navbar-brand" href="">WoofBook</a>
            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -219,7 +219,7 @@
     <footer id="footer">
       <i class="fab footer-icons fa-twitter"></i> <i class="fab footer-icons fa-facebook"></i> <i class="fab footer-icons fa-instagram"></i> <i class="fas footer-icons fa-envelope"></i>
       <p>© Copyright 2021 WoofBook</p>
-      <p> Made with ❤️ Gajendra Surariya</p>
+      <p> Made with ❤️ by Gajendra Surariya</p>
 
     </footer>
   </div>
